examples/kju/negative/no_entry_point.kju
fun f(a: Bool, b: Int): Int
{
	return 0;
}
fun g(a: Bool, b: Int): Bool
{
	return a;
}